Enables efficient delegation of primaryKey comparison on a relation.

--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,7 @@
   <packageSources>
     <clear />
     <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
+    <add key="removeIt" value="C:\Jas\Power-FX\src\outputpackages" />
   </packageSources>
   <disabledPackageSources>
     <clear />
