--- a/src/Build.props
+++ b/src/Build.props
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <!-- https://github.com/microsoft/Power-Fx/commit/f4232bf481f54958f60d6269f2f2d7607c018e90 -->
-    <PowerFxVersion>1.99.0-local</PowerFxVersion>
+    <PowerFxVersion>1.3.0-build.20241218-1004</PowerFxVersion>
 
     <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
