--- a/src/Build.props
+++ b/src/Build.props
@@ -14,6 +14,11 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <!-- https://learn.microsoft.com/en-us/dotnet/core/project-sdk/msbuild-props#_skipupgradenetanalyzersnugetwarning -->
+    <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
+  </PropertyGroup>
+  
+  <PropertyGroup>
     <!-- Rules found at: https://aka.ms/Microsoft-NuGet-Compliance -->
     <PackageProjectUrl>https://aka.ms/PowerFxDataverseGithub</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/microsoft/Power-Fx/main/src/libraries/Microsoft.PowerFx.Core/icon.png</PackageIconUrl>
