--- a/src/Build.props
+++ b/src/Build.props
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <!-- https://github.com/microsoft/Power-Fx/commit/c0b21b2430bcd5332d361a5b8df19707e03c47fd -->
-    <PowerFxVersion>1.99.0-local</PowerFxVersion>
+    <!-- https://github.com/microsoft/Power-Fx/commit/be773bd01157b236ad1b3c0545a6c6dfd9308a01 -->
+    <PowerFxVersion>1.3.0-build.20250408-1001</PowerFxVersion>
 
     <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
