--- a/src/Build.props
+++ b/src/Build.props
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <!-- https://github.com/microsoft/Power-Fx/commit/5c8c82311cf4ce64d1543628be8a39f193baacd6 -->
-    <PowerFxVersion>1.4.0-build.20250509-1003</PowerFxVersion>
+    <PowerFxVersion>1.3.1</PowerFxVersion>
 
     <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
