--- a/src/Build.props
+++ b/src/Build.props
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <!-- https://github.com/microsoft/Power-Fx/commit/0deadc6d8956c5aa11e971ac11dc3983499a4308 -->
-    <PowerFxVersion>1.4.0-build.20250709-1002</PowerFxVersion>
+    <PowerFxVersion>1.99.0-local</PowerFxVersion>
 
     <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
